# yapping

./: .gitignore  LICENSE.md  README.md  package.json  svelte.config.ts  tsconfig.json  vite.config.js  vite.config.ts
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: environment.rs  http.rs  mod.rs  workspace.rs
src-tauri/src/types/: http.rs  mod.rs  workspace.rs
src/lib/: highlight.ts  utils.ts
src/lib/components/layout/: AppLayout.svelte
src/lib/components/main/: MainView.svelte  RequestView.svelte  TabBar.svelte
src/lib/components/response/: CopyButton.svelte  JsonBodyViewer.svelte  RawBodyViewer.svelte  ResponseBodyView.svelte  ResponseEmptyState.svelte  ResponseErrorState.svelte  ResponseHeadersTable.svelte  ResponsePane.svelte  ResponseStatusBar.svelte
src/lib/components/sidebar/: Sidebar.svelte
src/lib/constants/: http.ts
src/lib/stores/: tabs.svelte.ts  theme.svelte.ts  workspace.svelte.ts
src/lib/types/: index.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
