[package]
name = "yapping"
version = "0.1.0"
description = "API GUI Client"
authors = ["manymanecki"]
edition = "2021"

[lib]
name = "yapping_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
reqwest = { version = "0.13.2", features = ["json", "multipart", "query", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
